--- a/package.json
+++ b/package.json
@@ -13,12 +13,21 @@
     "@react-native-async-storage/async-storage": "^1.19.0",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "moment": "^2.29.4",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-native": "0.72.1",
+    "react-native-date-picker": "^4.2.13",
+    "react-native-image-picker": "^5.6.0",
     "react-native-paper": "^5.9.0",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "^3.22.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "react-redux": "^8.1.1",
+    "react-thunk": "^1.0.0",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
